<resources>
    <string name="app_name">LifeCelebrated</string>

    <!-- TODO: (Required) Add your Firebase database reference replace YOUR_DATABASE_NAME with the name of your database -->
    <string name="FIREBASE_BASE_REF">https://YOUR_DATABASE_NAME.firebaseio.com</string>

    <!-- TODO: (Optional) change the user data path -->
    <!-- location (off of the base reference) of the user map -->
    <string name="FIREBASE_USER_MAP">userData/userMap</string>
    <!-- location (off of the base reference) of the user ID (push) -->
    <string name="FIREBASE_USERS">userData/users</string>
    <!-- location (off of the FIREBASE_USERS) of the user login information -
        leave empty for no grouping:  <string name="FIREBASE_USER_INFO"/> -->
    <string name="FIREBASE_USER_INFO">userInfo</string>
    <string name="FIREBASE_CHILD_EDIT_LIST">edit/editList</string>
    <string name="FIREBASE_CHILD_EDIT_DETAILS">edit/editDetails</string>
    <string name="FIREBASE_CHILD_MASTER_NAMES">names</string>

    <!-- **** Start Shared Preference **** -->

    <!-- define shared file name -->
    <string name="preference_file_key">info.anth.lifecelebrated.PREFERENCE_FILE_KEY</string>

    <!-- TODO: (Optional) Change fields defaults for your shared preferences -->
    <!-- define shared file field - defaults -->
    <string name="preference_email_default">none</string>
    <string name="preference_display_name_default">Not provided</string>
    <string name="preference_profile_image_default">none</string>

    <!-- Messages -->
    <string name="preference_missing_error">Missing user data</string>

    <!-- **** End Shared Preference **** -->

    <!-- **** Start Firebase login text **** -->

    <!-- fragment_firebase_login.xml -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_or">or</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_google">Login with Google</string>
    <string name="login_twitter">Login with Twitter</string>
    <string name="login_create">Create Account</string>

    <!-- activity_login.xml -->
    <string name="login_verify_text">This activity requires you to be logged in.</string>
    <string name="login_verify_cancel">Cancel</string>
    <string name="login_verify_login">Login</string>
    <string name="login_reset_password">Reset Password</string>

    <!-- dialog_login_register.xml -->
    <string name="login_retype_password">Retype Password</string>
    <string name="register_name">Name (optional)</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password must be at least 3 characters long</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_retype">Password and password retype are not the same</string>

    <!-- LoginActivity.java messages -->
    <string name="reset_email_sent">Password reset email sent</string>
    <string name="reset_email_required">Email field is required for reset</string>
    <string name="missing_user_data">Not provided by user</string>

    <!-- **** End Firebase login text **** -->

    <!-- ************************* -->
    <!-- *** begin edit activity *** -->

    <string name="image_alt">Location Image</string>
    <string name="image_device">Image on another device</string>

    <!-- *** end edit activity *** -->
    <!-- ************************* -->

    <!-- *** begin main activity *** -->

    <!-- button text -->
    <string name="explore">Explore</string>
    <string name="add">Add</string>
    <string name="discovery">Discovery</string>
    <string name="my_places">Places I have been</string>
    <string name="my_saved">Saved</string>
    <string name="my_watched">Watched</string>
    <string name="my_discoveries">My Discoveries</string>
    <string name="my_all">All</string>
    <string name="my_edits">Current Edits</string>

    <!-- *** end main activity *** -->

    <!-- *** begin step activity *** -->

    <string name="step">Step</string>
    <string name="title_activity_steps">Add a Location</string>
    <string name="action_settings">Settings</string>

    <!-- *** begin step fragments *** -->

    <!-- fragment_al_editbox.xml -->
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>

    <!-- fragment_al_image.xml -->
    <string name="image_camera">Camera</string>
    <string name="image_load">Load</string>
    <string name="image_upload">Upload</string>
    <string name="image_landscape"/>
    <string name="image_description">Main Image</string>

    <!-- fragment_al_verify_location.xml -->
    <string name="meters">Meters</string>
    <string name="dashes">--</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location_heading">Location Details:</string>
    <string name="manual_add_location">To change location, long click on the map. A marker will appear. Click the update button to update the location.</string>
    <string name="location_button">Update Location</string>

    <!-- *** Step Order Start *** -->
    <!-- Ordered step details - change order using int array in numbers -->

    <string-array name="step_fragment">
        <item />
        <item>ImageFragment</item>
        <item>BlankFragment</item>
        <item>NamesFragment</item>
        <item>VerifyLocationFragment</item>
        <item>BlankFragment</item>
    </string-array>

    <!--
    <string-array name="step_tab_icon">
        <item />
        <item>ic_step_camera_24dp</item>
        <item>ic_step_camera_24dp</item>
        <item>ic_step_edit_24dp</item>
        <item>ic_step_location_24dp</item>
        <item>ic_step_publish_24dp</item>
    </string-array>
    -->

    <!-- Changes in the step_db_column array also needs to be made in DbLocationEditStatus.java -->
    <string-array name="step_db_column">
        <item />
        <item>picture</item>
        <item>images</item>
        <item>name</item>
        <item>location</item>
        <item>publish</item>
    </string-array>

    <string-array name="step_title">
        <item />
        <item>Add Main Picture</item>
        <item>Additional Images</item>
        <item>Enter Names</item>
        <item>Verify Location</item>
        <item>Publish</item>
    </string-array>

    <string-array name="step_title_short">
        <item />
        <item>Picture</item>
        <item>Images</item>
        <item>Names</item>
        <item>Location</item>
        <item>Publish</item>
    </string-array>

    <string-array name="step_text">
        <item />
        <item>Choose a picture to represent the grave marker.</item>
        <item>Any additional images (quotes)</item>
        <item>Please enter the names and dates on marker.</item>
        <item>Please verify that the location and cemetery shown on the map is in the correct location.</item>
        <item>Publish the grave marker.</item>
    </string-array>

    <!-- *** end step fragments *** -->
    <!-- *** end step activity *** -->

    <string name="month_prompt">Month</string>

    <string-array name="month_array_no">
        <item>01 January</item>
        <item>02 February</item>
        <item>03 March</item>
        <item>04 April</item>
        <item>05 May</item>
        <item>06 June</item>
        <item>07 July</item>
        <item>08 August</item>
        <item>09 September</item>
        <item>10 October</item>
        <item>11 November</item>
        <item>12 December</item>
    </string-array>

    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="picture_msg_default">Missing Picture</string>
    <string name="name_msg_default">Missing Names</string>
    <string name="image_msg_default"/>
    <string name="location_msg_default">Location needs verified</string>
    <string name="publish_msg_default"/>

    <string name="picture_ic_default">ic_step_camera_24dp</string>
    <string name="name_ic_default">ic_step_edit_24dp</string>
    <string name="image_ic_default">ic_step_camera_24dp</string>
    <string name="location_ic_default">ic_step_location_24dp</string>
    <string name="publish_ic_default">ic_step_publish_24dp</string>

    <string name="google_maps_api2">test</string>
</resources>
