    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="info.anth.lifecelebrated.Steps$PlaceholderFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            >
            <!-- Heading -->
            <include layout="@layout/include_step_header"/>

            <!-- Info -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="italic"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:textIsSelectable="true"
                android:text="@string/image_landscape"
                />
            <Button
                android:id="@+id/image_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/image_upload"
                android:layout_marginBottom="10dp"
                android:textColor="#FFFFFF"
                android:visibility="gone"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- Image -->
                <ImageView
                    android:id="@+id/main_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#11000000"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_camera_alt_24dp"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/image_description"
                    />
                <TextView
                    android:id="@+id/main_image_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="@string/image_device"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:padding="40dp"
                    android:visibility="gone"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    >
                    <Button
                        android:id="@+id/image_camera"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/image_camera"
                        android:layout_gravity="center"
                        android:background="@color/colorAccent"
                        android:layout_margin="5dp"
                        android:textColor="#FFFFFF"
                        />
                    <Button
                        android:id="@+id/image_load"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/image_load"
                        android:layout_gravity="center"
                        android:background="@color/colorAccent"
                        android:layout_margin="5dp"
                        android:textColor="#FFFFFF"
                        />
                </LinearLayout>
                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/scroll_view_footer"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
        </LinearLayout>

    </ScrollView>
