<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="info.anth.lifecelebrated.Steps$PlaceholderFragment"
    android:id="@+id/scrollView"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <!-- Title -->
        <include layout="@layout/include_step_header"/>
<!-- class="com.google.android.gms.maps.SupportMapFragment"
 class="location4.Helpers.WorkaroundMapFragment"
-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_height="300dp"
            >
            <LinearLayout
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                />
            <ProgressBar
                android:id="@+id/map_loading"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_button"
            android:enabled="false"
            android:layout_gravity="end"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/manual_add_location"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/hr_line1"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/colorAccent"
            android:layout_marginBottom="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/location_heading"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1">

                    <TableRow>

                        <TextView
                            android:paddingBottom="3dip"
                            android:paddingEnd="6dip"
                            android:paddingStart="6dip"
                            android:paddingTop="3dip"
                            android:text="@string/longitude"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/longitude"
                            android:layout_width="0dp"
                            android:gravity="end"
                            android:padding="3dip"
                            android:singleLine="true"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:paddingBottom="3dip"
                            android:paddingEnd="6dip"
                            android:paddingStart="6dip"
                            android:paddingTop="3dip"
                            android:text="@string/latitude"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/latitude"
                            android:layout_width="0dp"
                            android:gravity="end"
                            android:padding="3dip"
                            android:singleLine="true"
                            android:textSize="16sp" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="100dip"
                android:layout_height="100dip"
                android:layout_marginRight="5dip"
                android:layout_marginEnd="5dip"
                >

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:gravity="end"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/circular" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/accuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashes"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meters"
                        />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/hr_line2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginEnd="110dip"
            android:layout_marginRight="110dip"
            android:layout_marginStart="10dip"
            android:layout_marginLeft="10dip"
            />
        <TextView
            android:id="@+id/other_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/hr_line3"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/colorAccent"
            android:layout_marginBottom="50dp"
            />

    </LinearLayout>

</ScrollView>